--- a/css/style.css
+++ b/css/style.css
@@ -765,11 +765,12 @@ header {
 
 .work .work-link a {
     display: inline-block;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
+    margin: 1em;
     background-color: #6195FF;
     color: #FFF;
-    line-height: 100px;
+    line-height: 50px;
     text-align: center;
 }
 
